# vision-attend

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  render.yaml  setup-ssl.sh
.github/workflows/: ci.yml
backend/: .env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: analytics.py  auth.py  cameras.py  deps.py  enrollment.py  settings.py  users.py
backend/app/core/: config.py  crypto.py  init_admin.py  limiter.py  logging.py  security.py  websocket.py
backend/app/models/: database.py  schemas.py
backend/app/services/: camera_manager.py  email_service.py  face_recognition.py  index_sync.py  liveness_service.py
docs/: api.md  architecture.md  setup.md
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/nginx/: nginx.conf
frontend/nginx/certs/: fullchain.pem  privkey.pem
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AttendanceTrendChart.jsx  BulkUpload.jsx  CameraROIEditor.jsx  EnrollmentManager.jsx  FaceCapture.jsx  LiveActivity.jsx  ReportGenerator.jsx  UserEnrollment.jsx
frontend/src/components/ui/: Button.jsx  dialog.jsx
frontend/src/pages/: EmployeePortal.jsx  Login.jsx  RemoteEnroll.jsx  SettingsPage.jsx
frontend/src/store/: useAuthStore.js
frontend/src/utils/: file_utils.js
