[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "sqlmodel>=0.0.38",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.46.0",
]
