[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "facenet-pytorch>=2.5.3",
    "faiss-cpu>=1.13.2",
    "bcrypt>=4.0.1",
    "fastapi>=0.136.1",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "reportlab>=4.4.10",
    "sqlmodel>=0.0.38",
    "torch",
    "torchvision",
    "slowapi>=0.1.9",
    "uvicorn>=0.46.0",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "loguru>=0.7.2",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "ruff>=0.15.12",
]
